syntax = "proto3";

package ecommerce;

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 quantity = 5;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message ProductResponse {
  Product product = 1;
}

message SearchProductsRequest {
  string query = 1;
}

message SearchProductsResponse {
  repeated Product products = 1;
}
